apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
spec:
  selector:
    app: radarr
  ports:
    - name: radarr
      port: 7878
      targetPort: 7878
